--- a/scripts/archivo3.html
+++ b/scripts/archivo3.html
@@ -815,6 +815,31 @@
 <!--mes-->
         enero</td>
 
+        <td><a href="com/tira.php?tira=respuesta&amp;db=respuesta.lhcmt" title="respuesta">Respuesta</a></td>
+        <td><a href="com/tira.php?tira=songsmith&amp;db=songsmith.lhcmt" title="songsmith">Songsmith</a></td>
+        <td><a href="com/tira.php?tira=piratas&amp;db=piratas.lhcmt" title="piratas">Piratas</a></td>
+        <td><a href="com/tira.php?tira=desastre&amp;db=desastre.lhcmt" title="desastre">Desastre</a></td>
+        <td>*</td>
+</tr>
+
+<tr>
+        <td class="mes">
+<!--mes-->
+        febrero</td>
+
+        <td><a href="com/tira.php?tira=youtube&amp;db=youtube.lhcmt" title="youtube">Youtube</a></td>
+        <td><a href="com/tira.php?tira=starter&amp;db=starter.lhcmt" title="starter">Starter Edition</a></td>
+        <td><a href="com/tira.php?tira=detective&amp;db=detective.lhcmt" title="detective">Detective</a></td>
+        <td><a href="com/tira.php?tira=ads&amp;db=ads.lhcmt" title="ads">Ads</a></td>
+        <td>*</td>
+
+</tr>
+
+<tr>
+        <td class="mes">
+<!--mes-->
+        marzo</td>
+
         <td>--</td>
         <td>--</td>
         <td>--</td>
