--- a/scripts/archivo2.html
+++ b/scripts/archivo2.html
@@ -842,7 +842,7 @@
 
         <td><a href="com/tira.php?tira=abuela&amp;db=abuela.lhcmt" title="abuela">Abuela</a></td>
         <td><a href="com/tira.php?tira=referencia&amp;db=referencia.lhcmt" title="referencia">Referencia</a></td>
-        <td>--</td>
+        <td><a href="com/tira.php?tira=mayusculas&amp;db=mayusculas.lhcmt" title="mayusculas">Mayusculas</a></td>
         <td>--</td>
         <td>--</td>
 
