--- a/scripts/archivo2.html
+++ b/scripts/archivo2.html
@@ -843,7 +843,7 @@
         <td><a href="com/tira.php?tira=abuela&amp;db=abuela.lhcmt" title="abuela">Abuela</a></td>
         <td><a href="com/tira.php?tira=referencia&amp;db=referencia.lhcmt" title="referencia">Referencia</a></td>
         <td><a href="com/tira.php?tira=mayusculas&amp;db=mayusculas.lhcmt" title="mayusculas">Mayusculas</a></td>
-        <td>--</td>
+        <td><a href="com/tira.php?tira=colgado&amp;db=colgado.lhcmt" title="colgado">Colgado</a></td>
         <td>--</td>
 
 </tr>
