--- a/scripts/archivo2.html
+++ b/scripts/archivo2.html
@@ -844,7 +844,7 @@
         <td><a href="com/tira.php?tira=referencia&amp;db=referencia.lhcmt" title="referencia">Referencia</a></td>
         <td><a href="com/tira.php?tira=mayusculas&amp;db=mayusculas.lhcmt" title="mayusculas">Mayusculas</a></td>
         <td><a href="com/tira.php?tira=colgado&amp;db=colgado.lhcmt" title="colgado">Colgado</a></td>
-        <td>--</td>
+        <td><a href="com/tira.php?tira=Pelicula&amp;db=Pelicula.lhcmt" title="Pelicula">-r</a></td>
 
 </tr>
 
